# Highboy_nfc_driver

./: CMakeLists.txt  main.rar  st25r3916-1.txt
main/: CMakeLists.txt  crypto1.c  crypto1.h  emu_diag.c  emu_diag.h  hb_nfc_gpio.c  hb_nfc_spi.c  hb_nfc_spi.h  hb_nfc_spi_diag.c  hb_nfc_timer.c  highboy_nfc.h  highboy_nfc_error.h  iso14443a.c  iso14443a.h  iso_dep.c  iso_dep.h  listener.c  main.c  mf_classic.c  mf_classic.h  mf_classic_emu.c  mf_classic_emu.h  mf_classic_writer.c  mf_classic_writer.h  mf_ultralight.c  mf_ultralight.h  mfkey.c  nfc_card_info.c  nfc_common.h  nfc_debug.c  nfc_device.c  nfc_device.h  nfc_listener.c  nfc_manager.c  nfc_manager.h  nfc_poller.c  nfc_reader.c  nfc_scanner.c  poller.c  st25r3916_aat.c  (+7 more)
main/app/: main.c  nfc_app.c
main/driver/: st25r3916.c
main/hal/: hb_nfc_hal.c
main/include/: highboy_nfc_types.h
main/include/app/: nfc_card_info.h  nfc_debug.h  nfc_device.h  nfc_listener.h  nfc_reader.h  nfc_scanner.h
main/include/driver/: st25r3916_aat.h  st25r3916_cmd.h  st25r3916_core.h  st25r3916_fifo.h  st25r3916_irq.h  st25r3916_reg.h
main/include/hal/: hb_nfc_gpio.h  hb_nfc_timer.h
main/include/stack/iso14443a/: nfc_poller.h  poller.h
main/include/stack/mifare/: crypto1.h  mf_classic.h  mf_classic_emu.h  mfkey.h
main/stack/iso14443a/: iso14443a.c
main/stack/mifare/: mf_classic_emu.c  mifare.c
tests/: emulation.txt
